<resources>
    <string name="app_name">Note2Self</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="add">Add…</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="vertical_dots">&#8942;</string>
    <string name="edit">Edit…</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="note_image">Note Image</string>
    <string name="location_icon">Location Icon</string>
    <string name="no_location">No Location</string>

    //OpenWeatherMapKey
    <string name="owm_key">19f10d438480ab5c3322a74225efbf54</string>


</resources>
