<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNote">


    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="250dp"
            tools:layout_editor_absoluteX="8dp">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_image_big_height"
                    app:srcCompat="@drawable/camera_icon"
                    android:id="@+id/add_note_image"
                    android:scaleType="centerCrop"

            />

            <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/add_note_image"
                    android:id="@+id/img_camera_menu"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="-60dp"
                    android:layout_marginRight="10dp"

                    android:text="@string/vertical_dots"
                    android:textSize="30sp"
                    android:gravity="center"
            />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etxt_title"
                    android:layout_weight="1"
                    android:layout_below="@id/add_note_image"
                    android:hint="@string/title"


            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top|left"
                    android:maxLines="10"
                    android:lines="6"
                    android:scrollbars="vertical"
                    android:id="@+id/etxt_short_desc"
                    android:layout_below="@id/etxt_title"
                    android:singleLine="false"
                    android:hint="@string/description"

            />

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_below="@id/etxt_short_desc"
            >
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/btn_cancel_note"
                        app:layout_constraintEnd_toStartOf="@+id/btn_save_note"
                        android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:text="@string/cancel"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/btn_save_note"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:text="@string/save"/>

            </android.support.constraint.ConstraintLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>