<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:card_view="http://schemas.android.com/tools"
              android:id="@+id/card_layout_big"
>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp"
            card_view:cardCornerRadius="@dimen/card_album_radius"
            android:id="@+id/card_view_big"
    >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rlayout_big"
        >

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_image_big_height"
                    android:scaleType="centerCrop"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:id="@+id/card_image_big"
                    android:contentDescription="@string/note_image"
            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_card_title_big"
                    android:layout_below="@+id/card_image_big"
                    android:paddingLeft="@dimen/title_padding"
                    android:paddingRight="@dimen/title_padding"
                    android:paddingTop="@dimen/title_padding"
                    android:textSize="@dimen/card_title"
            />


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_card_description_big"
                    android:layout_below="@+id/txt_card_title_big"
                    android:layout_above="@+id/map_container"
                    android:paddingBottom="@dimen/songs_count_padding_bottom"
                    android:paddingLeft="@dimen/title_padding"
                    android:paddingRight="@dimen/title_padding"
                    android:textSize="@dimen/songs_count"
                    android:scrollbars="vertical"

            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_timedate_big"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/card_image_big"
                    android:layout_marginEnd="10dp"
                    android:text="@string/app_name"
            />
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/map_fragment_height"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/map_container"

            >

            </FrameLayout>

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_alignTop="@+id/map_container"
                    android:layout_alignStart="@id/card_image_big"
                    android:padding="10dp"


            >
                <ImageView

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/img_weather_big"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/weather_icon"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_weather_big"
                        android:layout_below="@+id/img_weather_big"
                        android:layout_centerInParent="true"
                />
            </RelativeLayout>


            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_alignParentBottom="true"
                    android:layout_alignEnd="@id/card_image_big"
                    android:padding="10dp"


            >
                <ImageView
                        android:contentDescription="@string/location_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/map_icon"
                        android:id="@+id/img_location_big"
                        android:layout_centerHorizontal="true"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_location_big"
                        android:layout_below="@+id/img_location_big"
                        android:layout_centerInParent="true"
                />
            </RelativeLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>